--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,5 @@
     <div id="app"></div>
   </body>
 
-  <script src="/generated-app.js"></script>
+  <script src="generated-app.js"></script>
 </html>
